# karaoke-app

./: .gitignore  README.md  WINDOWS_SETUP.md  app.js  autotune_backend_server.js  index.html  integration_bridge.py  package-lock.json  package.json  pitch_renderer_stub.js  start_autotune_system.sh  start_autotune_system_windows.bat  start_system_windows.bat  stop_autotune_system.sh  stop_autotune_system_windows.bat  test_frontend_connection.js  test_video_selection.js
autotune-app/: CMakeLists.txt  CMakeLists_windows.txt  Makefile  PROJECT_SUMMARY.md  README.md  SONG_USAGE.md  TECHNICAL_ARCHITECTURE.md  autotune-karaoke  build.sh  build_windows.bat  device_list  device_list.cpp  device_manager.py  devices_server.py  get_devices_json.py  karaoke  karaoke.cpp  navigate.sh  run.sh  run_karaoke.py  simple_noise_suppression.cpp  simple_noise_suppression.h  song_finder.py  test_params.cpp  voice_params.txt
autotune-app/tests/: audio_diagnostic.py  check_audio_devices.py  convert_melody_for_cpp.py  convert_melody_to_txt.py  extract_melody.py  extract_melody_continuous.py  headphones_karaoke.py  karaoke_autotune.py  karaoke_autotune_debug.py  karaoke_autotune_fixed.py  karaoke_voice_focused.py  karaoke_with_recording.py  low_latency_karaoke.py  manage_songs.py  melody_autotune_karaoke.py  play_recording.py  priority_karaoke.py  scan_songs.py  separate_bg_karaoke.py  simple_karaoke.py  smooth_karaoke.py  test_audio_plot.py  test_earpods_mic.py  test_melody_map.py  test_mic.py  test_mic_capture.py  test_wav_playback.py  wav_karaoke.py
songs/: songs.json
tests/: debug_pattern.js  debug_websocket.js  device_server.js  mock_backend_server.js  test_integration.py  test_websocket.js
